2008-10-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9442: SQL LIKE wildcards are not escaped correctly for list queries

2008-09-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug 9449: htmlArea RTE: Opera sometimes raises a JavaScript error when the RTE closes

2008-09-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8518: Wrong JavaScript inclusion in t3lib_TCEforms
	* Fixed bug #9335: Internal caching in t3lib_pageSelect::getRootLine() has no effect

2008-09-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9412: config.absRefPrefix can force wrong URL when linking across domains

2008-09-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9386: Acronym plugin encoding problem

2008-09-23  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9411: Editors cannot create new translations of pages

2008-09-21  Jeff Segars <jeff@webempoweredchurch.org>

  * Fixed bug #8719: File upload ends up in parse_url error on Windows (thanks to Steffen Kamper)

2008-09-21  Benjamin Mack  <benni@typo3.org>

  * Fixed bug #8578: Umlauts get displayed wrong in Web>Access module after updating rights (Thanks to Tobias Liebig and Susanne Moog)

2008-09-20  Dmitry Dulepov  <dmitry@typo3.org>

  * Fixed bug #9384: FE session hijacking

2008-09-18  Martin Kutschker  <masi@typo3.org>

  * Fixed bug #8950: page id not availabe in TCEmain hook clearCachePostProc
  * Fixed bug #8588: Admin tools -> User Admin -> List users online broken when [BE][lockIP] is set to < 4

2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>

  * Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
  * Fixed bug #9320: Adding a new mount-type "readonly" for temporary filemounts (thanks to Steffen kamper)

2008-09-16  Stanislas Rolland  <typo3@sjbr.ca>

  * Follow up to #9354: htmlArea RTE: no default css rule is provided for indentation: px to em

2008-09-16  Benjamin Mack  <benni@typo3.org>
