@@ -1,6 +1,10 @@
+2008-10-01  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9464: htmlArea RTE: url auto-detect feature not working in Firefox
+
 2008-09-29  Stanislas Rolland  <typo3@sjbr.ca>
 
-	* Fixed bug 9449: htmlArea RTE: Opera sometimes raises a JavaScript error when the RTE closes
+	* Fixed bug #9449: htmlArea RTE: Opera sometimes raises a JavaScript error when the RTE closes
 
 2008-09-26  Stanislas Rolland  <typo3@sjbr.ca>
 
